--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
             display: none;
         }
 
+        /* This is the "Auto-Detector" for mobile devices */
         @media (max-width: 768px) {
             /* Hide all original desktop/mobile controls */
             #toolbar, #footer, #hamburger-btn, .mobile #toolbar {
@@ -195,7 +196,7 @@
             #mobile-top-bar, #mobile-bottom-bar {
                 display: flex;
                 align-items: center;
-                justify-content: space-around;
+                justify-content: flex-start; /* FIX: Align buttons to the left */
                 position: fixed;
                 left: 0;
                 width: 100%;
@@ -205,7 +206,18 @@
                 z-index: 100;
                 padding: 0 5px;
                 box-sizing: border-box;
+                overflow-x: auto; /* FIX: Allow horizontal scrolling by swiping */
             }
+
+            /* Cosmetic fix to hide the scrollbar itself but keep it scrollable */
+            #mobile-top-bar::-webkit-scrollbar, #mobile-bottom-bar::-webkit-scrollbar {
+                display: none;
+            }
+            #mobile-top-bar, #mobile-bottom-bar {
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+            }
+
             .dark-mode #mobile-top-bar, .dark-mode #mobile-bottom-bar {
                 background-color: #252525;
                 border-color: #444;
@@ -219,8 +231,6 @@
             #mobile-bottom-bar {
                 bottom: 0;
                 border-top: 1px solid var(--mobile-border-color, #ccc);
-                flex-wrap: wrap; /* Allow wrapping if too many buttons */
-                overflow-x: auto;
             }
 
             #mobile-top-bar button, #mobile-bottom-bar button {
@@ -231,14 +241,14 @@
                 font-weight: bold;
                 cursor: pointer;
                 padding: 5px 8px;
-                flex-shrink: 0; /* Prevent buttons from shrinking */
+                flex-shrink: 0;
             }
              .dark-mode #mobile-top-bar button, .dark-mode #mobile-bottom-bar button {
                 color: #ddd;
             }
 
             #editor {
-                height: calc(100vh - 90px) !important; /* Full height minus top and bottom bars */
+                height: calc(100vh - 90px) !important;
                 margin-top: 45px;
                 padding: 15px !important;
             }
@@ -257,7 +267,7 @@
                 border-radius: 4px;
                 box-shadow: 0 2px 5px rgba(0,0,0,0.2);
                 z-index: 101;
-                width: 150px;
+                width: 160px; /* Slightly wider for new button */
             }
             .dark-mode #mobile-slider-menu {
                  background-color: #333;
@@ -290,6 +300,7 @@
     </style>
 </head>
 <body>
+    <button id="hamburger-btn" onclick="toggleMobileMenu()">☰</button>
     <div id="toolbar">
         <button title="Save" onclick="handleSave()">S</button>
         <button title="Clear" onclick="clearText()">C</button>
@@ -704,7 +715,7 @@
 
              const range = selection.getRangeAt(0);
              const selectedText = range.toString();
-             let replacementNode;
+             let formattedText; 
 
              switch (type) {
                  case 'bold': formattedText = `**${selectedText}**`; break;
