--- a/index.html
+++ b/index.html
@@ -185,7 +185,6 @@
             display: none;
         }
 
-        /* This is the "Auto-Detector" for mobile devices */
         @media (max-width: 768px) {
             /* Hide all original desktop/mobile controls */
             #toolbar, #footer, #hamburger-btn, .mobile #toolbar {
@@ -196,7 +195,7 @@
             #mobile-top-bar, #mobile-bottom-bar {
                 display: flex;
                 align-items: center;
-                justify-content: flex-start; /* FIX: Align buttons to the left */
+                justify-content: space-around;
                 position: fixed;
                 left: 0;
                 width: 100%;
@@ -206,18 +205,7 @@
                 z-index: 100;
                 padding: 0 5px;
                 box-sizing: border-box;
-                overflow-x: auto; /* FIX: Allow horizontal scrolling by swiping */
             }
-
-            /* Cosmetic fix to hide the scrollbar itself but keep it scrollable */
-            #mobile-top-bar::-webkit-scrollbar, #mobile-bottom-bar::-webkit-scrollbar {
-                display: none;
-            }
-            #mobile-top-bar, #mobile-bottom-bar {
-                -ms-overflow-style: none;
-                scrollbar-width: none;
-            }
-
             .dark-mode #mobile-top-bar, .dark-mode #mobile-bottom-bar {
                 background-color: #252525;
                 border-color: #444;
@@ -231,6 +219,8 @@
             #mobile-bottom-bar {
                 bottom: 0;
                 border-top: 1px solid var(--mobile-border-color, #ccc);
+                flex-wrap: wrap; /* Allow wrapping if too many buttons */
+                overflow-x: auto;
             }
 
             #mobile-top-bar button, #mobile-bottom-bar button {
@@ -241,14 +231,14 @@
                 font-weight: bold;
                 cursor: pointer;
                 padding: 5px 8px;
-                flex-shrink: 0;
+                flex-shrink: 0; /* Prevent buttons from shrinking */
             }
              .dark-mode #mobile-top-bar button, .dark-mode #mobile-bottom-bar button {
                 color: #ddd;
             }
 
             #editor {
-                height: calc(100vh - 90px) !important;
+                height: calc(100vh - 90px) !important; /* Full height minus top and bottom bars */
                 margin-top: 45px;
                 padding: 15px !important;
             }
@@ -267,7 +257,7 @@
                 border-radius: 4px;
                 box-shadow: 0 2px 5px rgba(0,0,0,0.2);
                 z-index: 101;
-                width: 160px; /* Slightly wider for new button */
+                width: 150px;
             }
             .dark-mode #mobile-slider-menu {
                  background-color: #333;
@@ -300,7 +290,6 @@
     </style>
 </head>
 <body>
-    <button id="hamburger-btn" onclick="toggleMobileMenu()">☰</button>
     <div id="toolbar">
         <button title="Save" onclick="handleSave()">S</button>
         <button title="Clear" onclick="clearText()">C</button>
@@ -715,7 +704,7 @@
 
              const range = selection.getRangeAt(0);
              const selectedText = range.toString();
-             let formattedText; 
+             let replacementNode;
 
              switch (type) {
                  case 'bold': formattedText = `**${selectedText}**`; break;
