--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         #footer.hidden { opacity: 0; pointer-events: none; }
         #footer.visible { opacity: 1; pointer-events: auto; }
         
-        /* --- START OF NEW MOBILE-SPECIFIC STYLES --- */
+        /* --- START OF MOBILE-SPECIFIC STYLES --- */
         #mobile-top-bar, #mobile-bottom-bar {
             display: none;
         }
@@ -195,7 +195,7 @@
             #mobile-top-bar, #mobile-bottom-bar {
                 display: flex;
                 align-items: center;
-                justify-content: space-around;
+                justify-content: flex-start;
                 position: fixed;
                 left: 0;
                 width: 100%;
@@ -205,7 +205,19 @@
                 z-index: 100;
                 padding: 0 5px;
                 box-sizing: border-box;
+                overflow-x: auto;
+                flex-wrap: nowrap; /* CRITICAL FIX: Force all items onto a single line */
+                white-space: nowrap; /* CRITICAL FIX: Fallback for older browsers */
             }
+            
+            #mobile-top-bar::-webkit-scrollbar, #mobile-bottom-bar::-webkit-scrollbar {
+                display: none;
+            }
+            #mobile-top-bar, #mobile-bottom-bar {
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+            }
+
             .dark-mode #mobile-top-bar, .dark-mode #mobile-bottom-bar {
                 background-color: #252525;
                 border-color: #444;
@@ -219,8 +231,6 @@
             #mobile-bottom-bar {
                 bottom: 0;
                 border-top: 1px solid var(--mobile-border-color, #ccc);
-                flex-wrap: wrap; /* Allow wrapping if too many buttons */
-                overflow-x: auto;
             }
 
             #mobile-top-bar button, #mobile-bottom-bar button {
@@ -231,19 +241,18 @@
                 font-weight: bold;
                 cursor: pointer;
                 padding: 5px 8px;
-                flex-shrink: 0; /* Prevent buttons from shrinking */
+                flex-shrink: 0;
             }
              .dark-mode #mobile-top-bar button, .dark-mode #mobile-bottom-bar button {
                 color: #ddd;
             }
 
             #editor {
-                height: calc(100vh - 90px) !important; /* Full height minus top and bottom bars */
+                height: calc(100vh - 90px) !important;
                 margin-top: 45px;
                 padding: 15px !important;
             }
 
-            /* New Slider Menu for mobile */
             #mobile-slider-container {
                 position: relative;
             }
@@ -257,7 +266,7 @@
                 border-radius: 4px;
                 box-shadow: 0 2px 5px rgba(0,0,0,0.2);
                 z-index: 101;
-                width: 150px;
+                width: 160px;
             }
             .dark-mode #mobile-slider-menu {
                  background-color: #333;
@@ -275,7 +284,6 @@
                 display: block;
             }
 
-            /* Focus Mode adjustments for new mobile UI */
             .focus-mode #mobile-top-bar,
             .focus-mode #mobile-bottom-bar {
                 display: none;
@@ -285,11 +293,12 @@
                 margin-top: 0;
             }
         }
-        /* --- END OF NEW MOBILE-SPECIFIC STYLES --- */
+        /* --- END OF MOBILE-SPECIFIC STYLES --- */
 
     </style>
 </head>
 <body>
+    <button id="hamburger-btn" onclick="toggleMobileMenu()">☰</button>
     <div id="toolbar">
         <button title="Save" onclick="handleSave()">S</button>
         <button title="Clear" onclick="clearText()">C</button>
@@ -704,7 +713,7 @@
 
              const range = selection.getRangeAt(0);
              const selectedText = range.toString();
-             let replacementNode;
+             let formattedText; 
 
              switch (type) {
                  case 'bold': formattedText = `**${selectedText}**`; break;
