--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         #footer.hidden { opacity: 0; pointer-events: none; }
         #footer.visible { opacity: 1; pointer-events: auto; }
         
-        /* --- START OF NEW MOBILE-SPECIFIC STYLES --- */
+        /* --- START OF MOBILE-SPECIFIC STYLES --- */
         #mobile-top-bar, #mobile-bottom-bar {
             display: none;
         }
@@ -191,10 +191,11 @@
                 display: none !important;
             }
 
-            /* Show and style new mobile bars */
+            /* =====================================================================
+            BULLETPROOF FIX FOR MOBILE TOOLBARS (REPLACING FLEXBOX)
+            =====================================================================
+            */
             #mobile-top-bar, #mobile-bottom-bar {
-                display: flex;
-                align-items: center;
                 position: fixed;
                 left: 0;
                 width: 100%;
@@ -204,9 +205,27 @@
                 z-index: 100;
                 padding: 0 5px;
                 box-sizing: border-box;
-                overflow-x: auto; /* Allow horizontal scrolling for buttons */
-                white-space: nowrap; /* Prevent wrapping */
+                overflow-x: auto; /* Make the bar scrollable */
+                white-space: nowrap; /* Force all buttons onto a single line */
+                line-height: 45px; /* Helps vertically center the buttons */
             }
+            
+            #mobile-top-bar button, 
+            #mobile-bottom-bar button, 
+            #mobile-slider-container {
+                display: inline-block; /* Make buttons line up like text */
+                vertical-align: middle; /* Ensure they align properly */
+            }
+
+            /* Cosmetic fix to hide the scrollbar itself but keep it scrollable */
+            #mobile-top-bar::-webkit-scrollbar, #mobile-bottom-bar::-webkit-scrollbar {
+                display: none;
+            }
+            #mobile-top-bar, #mobile-bottom-bar {
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+            }
+
             .dark-mode #mobile-top-bar, .dark-mode #mobile-bottom-bar {
                 background-color: #252525;
                 border-color: #444;
@@ -215,13 +234,11 @@
             #mobile-top-bar {
                 top: 0;
                 border-bottom: 1px solid var(--mobile-border-color, #ccc);
-                justify-content: flex-start; /* Align to left with scroll */
             }
 
             #mobile-bottom-bar {
                 bottom: 0;
                 border-top: 1px solid var(--mobile-border-color, #ccc);
-                justify-content: flex-start; /* Align to left with scroll */
             }
 
             #mobile-top-bar button, #mobile-bottom-bar button {
@@ -232,34 +249,32 @@
                 font-weight: bold;
                 cursor: pointer;
                 padding: 5px 8px;
-                flex-shrink: 0; /* Prevent buttons from shrinking */
-                display: inline-block; /* Ensure they line up */
             }
              .dark-mode #mobile-top-bar button, .dark-mode #mobile-bottom-bar button {
                 color: #ddd;
             }
 
             #editor {
-                height: calc(100vh - 90px) !important; /* Full height minus top and bottom bars */
+                height: calc(100vh - 90px) !important;
                 margin-top: 45px;
                 padding: 15px !important;
             }
 
-            /* New Slider Menu for mobile */
             #mobile-slider-container {
                 position: relative;
             }
             #mobile-slider-menu {
                 display: none;
                 position: absolute;
-                top: 40px;
+                top: 35px; /* Adjusted for new layout */
                 right: 0;
                 background-color: var(--mobile-bar-bg, #f5f5f5);
                 border: 1px solid var(--mobile-border-color, #ccc);
                 border-radius: 4px;
                 box-shadow: 0 2px 5px rgba(0,0,0,0.2);
                 z-index: 101;
-                width: 150px;
+                width: 160px;
+                line-height: 1.5; /* Reset line-height for the menu */
             }
             .dark-mode #mobile-slider-menu {
                  background-color: #333;
@@ -277,7 +292,6 @@
                 display: block;
             }
 
-            /* Focus Mode adjustments for new mobile UI */
             .focus-mode #mobile-top-bar,
             .focus-mode #mobile-bottom-bar {
                 display: none;
@@ -286,20 +300,13 @@
                 height: 100vh !important;
                 margin-top: 0;
             }
-
-            /* Adjustments for smaller screens */
-            @media (max-width: 480px) {
-                #mobile-top-bar button, #mobile-bottom-bar button {
-                    font-size: 16px; /* Slightly smaller font for very small screens */
-                    padding: 5px 6px;
-                }
-            }
         }
-        /* --- END OF NEW MOBILE-SPECIFIC STYLES --- */
+        /* --- END OF MOBILE-SPECIFIC STYLES --- */
 
     </style>
 </head>
 <body>
+    <button id="hamburger-btn" onclick="toggleMobileMenu()">☰</button>
     <div id="toolbar">
         <button title="Save" onclick="handleSave()">S</button>
         <button title="Clear" onclick="clearText()">C</button>
@@ -714,7 +721,7 @@
 
              const range = selection.getRangeAt(0);
              const selectedText = range.toString();
-             let replacementNode;
+             let formattedText; 
 
              switch (type) {
                  case 'bold': formattedText = `**${selectedText}**`; break;
