--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
                 background: none;
                 border: none;
                 color: var(--mobile-btn-color, #000);
-                font-size: 18px;
+                font-size: 16px; /* Reduced font size */
                 font-weight: bold;
                 cursor: pointer;
-                padding: 5px 8px;
+                padding: 5px 6px; /* Reduced padding */
                 flex-shrink: 0;
-                min-width: 32px;
-                max-width: 60px;
+                min-width: 30px; /* Reduced min-width */
+                max-width: 50px; /* Reduced max-width */
                 display: inline-block;
             }
              .dark-mode #mobile-top-bar, .dark-mode #mobile-bottom-bar {
@@ -284,6 +284,28 @@
                 height: 100vh !important;
                 margin-top: 0;
             }
+
+            /* Fullscreen exit symbol in mobile fullscreen mode */
+            #mobile-fullscreen-exit {
+                display: none;
+            }
+            .fullscreen #mobile-fullscreen-exit {
+                display: block;
+                position: fixed;
+                top: 10px;
+                right: 10px;
+                z-index: 2000;
+                background: rgba(0,0,0,0.5);
+                color: white;
+                border: none;
+                border-radius: 50%;
+                width: 40px;
+                height: 40px;
+                font-size: 20px;
+                cursor: pointer;
+                text-align: center;
+                line-height: 40px;
+            }
         }
         /* --- END OF MOBILE-SPECIFIC STYLES --- */
 
@@ -310,7 +332,7 @@
     </div>
 
     <div id="mobile-top-bar">
-        <button title="Save" onclick="handleSave()">S</button> <!-- Added Save button -->
+        <button title="Save" onclick="handleSave()">S</button>  <!-- Added Save button -->
         <button title="Increase Font Size" onclick="increaseFont()">+</button>
         <button title="Decrease Font Size" onclick="decreaseFont()">-</button>
         <button title="Clear" onclick="clearText()">C</button>
@@ -374,6 +396,9 @@
             <button title="Toggle Full Screen" onclick="toggleFullScreen()">[ ]</button>
         </div>
     </div>
+
+    <!-- Mobile Fullscreen Exit Button -->
+    <button id="mobile-fullscreen-exit" onclick="toggleFullScreen()">⛶</button>
 
     <script>
         // --- START: New function for mobile slider menu ---
@@ -699,35 +724,36 @@
         }
 
         function formatText(type) {
-             const editor = document.getElementById('editor');
-             const selection = window.getSelection();
-             if (!selection.rangeCount) return;
+            I2 = 1;
+            const editor = document.getElementById('editor');
+            const selection = window.getSelection();
+            if (!selection.rangeCount) return;
 
-             const range = selection.getRangeAt(0);
-             const selectedText = range.toString();
-             let formattedText; 
+            const range = selection.getRangeAt(0);
+            const selectedText = range.toString();
+            let formattedText; 
 
-             switch (type) {
-                 case 'bold': formattedText = `**${selectedText}**`; break;
-                 case 'italic': formattedText = `*${selectedText}*`; break;
-                 case 'heading1': formattedText = `# ${selectedText}`; break;
-                 case 'heading2': formattedText = `## ${selectedText}`; break;
-                 case 'link': const url = prompt('Enter URL:') || '#'; formattedText = `[${selectedText}](${url})`; break;
-                 case 'image': const imgUrl = prompt('Enter image URL:'); formattedText = `![${selectedText}](${imgUrl})`; break;
-                 case 'list': formattedText = `- ${selectedText}`; break;
-                 case 'numberedList': formattedText = `1. ${selectedText}`; break;
-                 case 'quote': formattedText = `> ${selectedText}`; break;
-                 case 'code': formattedText = `\`${selectedText}\``; break;
-                 case 'table': formattedText = '| Header 1 | Header 2 |\n|---|---|\n| Cell 1 | Cell 2 |'; break;
-                 case 'footnote': const note = prompt('Enter footnote ID:'); formattedText = `${selectedText}[^${note}]`; break;
-                 default: formattedText = selectedText;
-             }
+            switch (type) {
+                case 'bold': formattedText = `**${selectedText}**`; break;
+                case 'italic': formattedText = `*${selectedText}*`; break;
+                case 'heading1': formattedText = `# ${selectedText}`; break;
+                case 'heading2': formattedText = `## ${selectedText}`; break;
+                case 'link': const url = prompt('Enter URL:') || '#'; formattedText = `[${selectedText}](${url})`; break;
+                case 'image': const imgUrl = prompt('Enter image URL:'); formattedText = `![${selectedText}](${imgUrl})`; break;
+                case 'list': formattedText = `- ${selectedText}`; break;
+                case 'numberedList': formattedText = `1. ${selectedText}`; break;
+                case 'quote': formattedText = `> ${selectedText}`; break;
+                case 'code': formattedText = `\`${selectedText}\``; break;
+                case 'table': formattedText = '| Header 1 | Header 2 |\n|---|---|\n| Cell 1 | Cell 2 |'; break;
+                case 'footnote': const note = prompt('Enter footnote ID:'); formattedText = `${selectedText}[^${note}]`; break;
+                default: formattedText = selectedText;
+            }
 
-             range.deleteContents();
-             range.insertNode(document.createTextNode(formattedText));
-             
-             saveToHistory();
-             updateStats();
+            range.deleteContents();
+            range.insertNode(document.createTextNode(formattedText));
+            
+            saveToHistory();
+            updateStats();
         }
 
         document.addEventListener('fullscreenchange', () => {
@@ -760,6 +786,29 @@
 
         saveToHistory();
         updateStats();
+
+        // Hide slider menu after clicking an item (only for mobile)
+        if (isMobile()) {
+            document.querySelectorAll('#mobile-slider-menu button').forEach(btn => {
+                btn.addEventListener('click', () => {
+                    document.getElementById('mobile-slider-menu').classList.remove('show');
+                });
+            });
+        }
+
+        // Fullscreen exit button for mobile
+        if (isMobile()) {
+            const exitBtn = document.createElement('button');
+            exitBtn.id = 'mobile-fullscreen-exit';
+            exitBtn.innerText = '⛶';
+            exitBtn.onclick = toggleFullScreen;
+            document.body.appendChild(exitBtn);
+
+            document.addEventListener('fullscreenchange', () => {
+                const isFullscreen = !!document.fullscreenElement;
+                exitBtn.style.display = isFullscreen ? 'block' : 'none';
+            });
+        }
 
     </script>
 </body>
