--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
                 position: fixed;
                 left: 0;
                 width: 100%;
-                height: auto; /* Allow height to adjust with wrapped content */
+                height: 45px;
                 background-color: var(--mobile-bar-bg, #f5f5f5);
                 border-color: var(--mobile-border-color, #ccc);
                 z-index: 100;
-                padding: 5px;
+                padding: 0 5px;
                 box-sizing: border-box;
-                flex-wrap: wrap; /* Allow buttons to wrap */
-                justify-content: space-around;
-                overflow: visible; /* No scroll, let wrap handle it */
+                overflow-x: auto;
+                white-space: nowrap;
+                justify-content: flex-start;
             }
             #mobile-top-bar {
                 top: 0;
@@ -224,9 +224,10 @@
                 font-weight: bold;
                 cursor: pointer;
                 padding: 5px 8px;
-                flex: 1 1 auto; /* Flexible width to fit */
-                min-width: 40px;
-                text-align: center;
+                flex-shrink: 0;
+                min-width: 32px;
+                max-width: 60px;
+                display: inline-block;
             }
              .dark-mode #mobile-top-bar, .dark-mode #mobile-bottom-bar {
                 background-color: #252525;
@@ -237,8 +238,8 @@
             }
 
             #editor {
-                height: calc(100vh - 100px) !important; /* Adjusted for potential multi-row bars */
-                margin-top: 50px;
+                height: calc(100vh - 90px) !important;
+                margin-top: 45px;
                 padding: 15px !important;
             }
 
