--- a/index.html
+++ b/index.html
@@ -329,9 +329,9 @@
 
     <div id="mobile-top-bar">
         <button title="Save" onclick="handleSave()">S</button>
-        <button title="Toggle Auto Save" onclick="toggleAutoSave()">A</button>
+        <button title="Toggle Auto Save" onclick="toggleAutoSave()">🔄</button>
         <button title="Toggle Dark Mode" onclick="toggleDarkMode()">🌙</button>
-        <button title="Toggle Full Screen" onclick="toggleFullScreen()">[ ]</button>
+        <button title="Toggle Full Screen" onclick="toggleFullScreen()">⛶</button>
         <div id="mobile-slider-container">
             <button onclick="toggleMobileSliderMenu()">☰</button>
             <div id="mobile-slider-menu">
