--- a/index.html
+++ b/index.html
@@ -354,11 +354,11 @@
         <button title="Heading 2" onclick="formatText('heading2')">##</button>
         <button title="Insert Link" onclick="formatText('link')">Link</button>
         <button title="Insert Image" onclick="formatText('image')">Img</button>
-        <button title="Numbered List" onclick="formatText('numberedList')">1.</button>
+        <button title="Numbered List" onclick="formatText('numberedList')">🔢</button>
         <button title="Blockquote" onclick="formatText('quote')">></button>
         <button title="Code" onclick="formatText('code')">Code</button>
-        <button title="Insert Table" onclick="formatText('table')">Table</button>
-        <button title="Insert Footnote" onclick="formatText('footnote')">Footnote</button>
+        <button title="Insert Table" onclick="formatText('table')">▦</button>
+        <button title="Insert Footnote" onclick="formatText('footnote')">📎</button>
     </div>
     
     <div id="fullscreen-controls">
