--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
                 display: none !important;
             }
 
-            /* Add AI label to hamburger button */
-            #mobile-slider-container button::before {
-                content: "AI ";
+           /* Add AI label ONLY to the hamburger button */
+            #mobile-slider-container .hamburger::after {
+                content: "AI";
                 font-size: 14px;
             }
 
