--- a/index.html
+++ b/index.html
@@ -335,9 +335,9 @@
         <div id="mobile-slider-container">
             <button onclick="toggleMobileSliderMenu()">☰</button>
             <div id="mobile-slider-menu">
-                <button onclick="showApiInstructions()">API Instructions</button>
+                <button onclick="showApiInstructions()">Instructions</button>
                 <button onclick="setApiKey()">API Key</button>
-                <button onclick="getAiSuggestion()">AI Suggest</button>
+                <button onclick="getAiSuggestion()">Suggest</button>
                 <button onclick="getAiProofread()">Proofread</button>
             </div>
         </div>
