--- a/index.html
+++ b/index.html
@@ -290,10 +290,10 @@
                 display: none !important;
             }
 
-           /* Add AI label ONLY to the hamburger button */
-            #mobile-slider-container .hamburger::after {
+           /* Add AI label to hamburger button */ 
+            #mobile-slider-container button::before {
                 content: "AI";
-                font-size: 14px;
+                font-size: 15px;
             }
 
             /* Shift + - undo redo to bottom bar and order as C + - undo redo then others */
