--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ flex: 0 0 auto; / no stretching, no wrapping */
 
     <div id="mobile-top-bar">
          <div id="mobile-slider-container">
-            <button onclick="toggleMobileSliderMenu()">AI☰</button>
+            <button onclick="toggleMobileSliderMenu()">ai☰</button>
             <div id="mobile-slider-menu">
                 <button onclick="showApiInstructions()"> AI Instructions</button>
                 <button onclick="setApiKey()"> API Key</button>
